# football-predictor

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  fly.toml  football.db-shm  pyproject.toml
backend/app/: config.py  db.py  main.py
backend/app/api/: auth.py  coupon_history.py  coupons.py  deps.py  matches.py  predictions.py  push.py  sport_events.py  stats.py
backend/app/core/: security.py
backend/app/features/: adjust.py  form.py  motivation.py  standings.py
backend/app/ingestion/: api_football.py  api_sports_basketball.py  base.py  espn_basketball.py  fixtures.py  football_data.py  football_data_new.py  football_data_org.py  leagues.py  understat.py
backend/app/ml/: accuracy.py  calibration.py  coupons.py  dixon_coles.py  markets.py  prob_calibration.py  value.py
backend/app/models/: __init__.py  coupon.py  match.py  odds.py  prediction.py  push.py  sport_event.py  team.py  team_availability.py  user.py
backend/app/services/: push.py
backend/scripts/: backfill_predictions.py  backtest.py  backtest_composer.py  backtest_ev_search.py  fetch_availability.py  fetch_live_scores.py  fetch_prematch_odds.py  fetch_xg_api_football.py  fit_calibration.py  ingest_all.py  manual_finalize_paused.py  migrate_add_availability.py  migrate_add_live_cols.py  migrate_add_push.py  migrate_add_xg.py  migrate_normalize_seasons.py  predict_upcoming.py  reap_stale_matches.py  record_daily_coupons.py  reset_user_facing_history.py  resolve_coupons.py  sync_bnv.py  train_baseline.py
backend/tests/: test_markets.py
(+26 files in other folders)
