[project]
name = "football-predictor-backend"
version = "0.1.0"
description = "Multi-user football match predictor — API, models, ingestion"
requires-python = ">=3.12"
dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    # Auth
    "pyjwt>=2.9",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.12",
    # DB
    "sqlalchemy>=2.0",
    "alembic>=1.14",
    # Data + ML
    "numpy>=2.0",
    "scipy>=1.14",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    # HTTP / scraping
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
